---
source: book/tests/snapshot.rs
expression: "from de=dept_emp\njoin s=salaries side:left [\n  (s.emp_no == de.emp_no),\n  s\"({s.from_date}, {s.to_date}) OVERLAPS ({de.from_date}, {de.to_date})\"\n]\ngroup [de.emp_no, de.dept_no] (\n  aggregate salary = (average s.salary)\n)\njoin employees [==emp_no]\njoin titles [==emp_no]\nselect [dept_no, salary, employees.gender, titles.title]\n"
---
from de = dept_emp
join side:left s = salaries [
  s.emp_no == de.emp_no,
  s"({s.from_date}, {s.to_date}) OVERLAPS ({de.from_date}, {de.to_date})",
]
group [
  de.emp_no,
  de.dept_no,
] (
  aggregate (
  salary = average s.salary
)
)
join employees [==emp_no]
join titles [==emp_no]
select [
  dept_no,
  salary,
  employees.gender,
  titles.title,
]



